--- a/README.org
+++ b/README.org
@@ -19,23 +19,26 @@
 :END:
 
 * System Components
-|                 | *NixOS - Wayland* | *NixOS - Xorg*    | *Darwin*          | *NixOS - Other*     |
-|-----------------+-------------------+-------------------+-------------------+---------------------|
-| *Shell*         | Zsh               | Zsh               | Zsh               | Zsh                 |
-| *DM*            | GDM               | LightDM           | /                 | TTY1 Login          |
-| *WM/DE*         | Gnome             | Bspwm             | Yabai             | Hyprland/River/Sway |
-| *Compositor*    | Mutter            | Picom (jonaburg)  | /                 | Hyprland/River/Sway |
-| *Bar*           | Dock-to-Panel     | Polybar           | /                 | Waybar              |
-| *Hotkeys*       | /                 | Sxhkd             | Skhd              | Hyprland/River/Sway |
-| *Launcher*      | Gnome             | Rofi              | /                 | Rofi                |
-| *GTK Theme*     | Dracula           | Dracula           | /                 | Dracula             |
-| *Notifications* | Gnome             | Dunst             | /                 | Dunst               |
-| *Terminal*      | Alacritty         | Alacritty         | Alacritty         | Alacritty           |
-| *Editor*        | Nvim + Doom Emacs | Nvim + Doom Emacs | Nvim + Doom Emacs | Nvim + Doom Emacs   |
-| *Used by host*  | Desktop & Work    | Laptop & VM       | Macbook           | /                   |
+|                 | *NixOS -Wayland* | *NixOS - Wayland/Xorg* | *NixOS - Xorg*   | *Darwin*  |
+|-----------------+------------------+------------------------+------------------+-----------|
+| *DM*            | TTY1 Login       | GDM                    | LightDM          | /         |
+| *WM/DE*         | Hyprland         | Gnome                  | Bspwm            | Yabai     |
+| *Compositor*    | Hyprland         | Mutter                 | Picom (jonaburg) | /         |
+| *Bar*           | Waybar           | Dock-to-Panel          | Polybar          | /         |
+| *Hotkeys*       | Hyprland         | /                      | Sxhkd            | Skhd      |
+| *Launcher*      | Wofi             | Gnome                  | Rofi             | /         |
+| *GTK Theme*     | Dracula          | Dracula / Adwaita      | Dracula          | /         |
+| *Notifications* | Dunst            | Gnome                  | Dunst            | /         |
+| *Terminal*      | Alacritty        | Alacritty              | Alacritty        | Alacritty |
+| *Used by host*  | Desktop          | Work                   | Laptop & VM      | Macbook   |
 
 There are some other desktop environments/window manager (See NixOS - Other). Just link to correct ~default/home.nix~ in ~./hosts/<host>/default and home.nix~.
 There is also a general Nix config with hostname ~pacman~ that can be used on pretty much any disto.
+
+Compontents relevant to all hosts:
+| *Shell*    | Zsh               |
+| *Terminal* | Alacritty         |
+| *Editors*  | Nvim + Doom Emacs |
 
 * NixOS Installation Guide
 This flake currently has *4* hosts
