Update NixOS wiki link

--- a/README.org
+++ b/README.org
@@ -307,21 +307,21 @@ This will rebuild the configuration and automatically activate it.
     - [[https://nixos.org/learn.html][Manuals]]
     - [[https://nixos.org/manual/nix/stable/introduction.html][Manual 2]]
     - [[https://search.nixos.org/packages][Packages]] and [[https://search.nixos.org/options?][Options]]
-    - [[https://nixos.wiki/][Unofficial Wiki]]
-    - [[https://nixos.wiki/wiki/Resources][Wiki Resources]]
+    - [[https://wiki.nixos.org/][Official Wiki]]
+    - [[https://wiki.nixos.org/wiki/Resources][Wiki Resources]]
     - [[https://nixos.org/guides/nix-pills/][Nix Pills]]
     - [[https://www.ianthehenry.com/posts/how-to-learn-nix/][Some]] [[https://christine.website/blog][Blogs]]
-    - [[https://nixos.wiki/wiki/Configuration_Collection][Config Collection]]
-    - [[https://nixos.wiki/wiki/Configuration_Collection][Config Collection]]
+    - [[https://wiki.nixos.org/wiki/Configuration_Collection][Config Collection]]
+    - [[https://wiki.nixos.org/wiki/Configuration_Collection][Config Collection]]
   - Home-manager
     - [[https://github.com/nix-community/home-manager][Official Repo]]
     - [[https://nix-community.github.io/home-manager/][Manual]]
     - [[https://nix-community.github.io/home-manager/options.html][Appendix A]]
     - [[https://nix-community.github.io/home-manager/nixos-options.html][Appendix B]]
     - [[https://nix-community.github.io/home-manager/tools.html][Appendix D]]
-    - [[https://nixos.wiki/wiki/Home_Manager][NixOS wiki]]
+    - [[https://wiki.nixos.org/wiki/Home_Manager][NixOS wiki]]
   - Flakes
-    - [[https://nixos.wiki/wiki/Flakes][NixOS wiki]]
+    - [[https://wiki.nixos.org/wiki/Flakes][NixOS wiki]]
     - [[https://nixos.org/manual/nix/stable/command-ref/new-cli/nix3-flake.html][Manual]]
     - [[https://www.tweag.io/blog/2020-05-25-flakes/][Some]] [[https://christine.website/blog/nix-flakes-3-2022-04-07][Blogs]]
   - Nix-Darwin
