--- a/nix.org
+++ b/nix.org
@@ -107,7 +107,7 @@ If you would also like to configure these packages using their options, it's rec
 
 ** Getting Started
 *** Flakes Wiki
-- [[https://nixos.wiki/wiki/Flakes][Wiki]]
+- [[https://wiki.nixos.org/wiki/Flakes][Wiki]]
 
 *** Preparing the System
  *Allowing experimental features such as flake to be installed*
@@ -235,7 +235,7 @@ If you would also like to configure these packages using their options, it's rec
 1. [[https://nixos.org/][NixOS Website]]
 2. [[https://nixos.org/learn.html/][NixOS Learn]]
 3. [[https://nixos.org/manual/nix/stable/introduction.html][Nix Manual]]
-4. [[https://nixos.wiki/wiki/Main_Page][NixOS Wiki]]
+4. [[https://wiki.nixos.org/wiki/Main_Page][NixOS Wiki]]
 5. [[https://nixos.org/guides/nix-pills/][Nix Pills]]
 6. [[https://github.com/nix-community/home-manager/][Home-Manager Github]]
 7. [[https://nix-community.github.io/home-manager/][Home-Manager Manual]]
