--- a/README.org
+++ b/README.org
@@ -19,18 +19,18 @@
 :END:
 
 * System Components
-|                 | *NixOS - Wayland*  | *NixOS - Wayland/Xorg* | *NixOS - Xorg*   | *Darwin*  |
-|-----------------+--------------------+------------------------+------------------+-----------|
-| *DM*            | /                  | GDM                    | LightDM          | /         |
-| *WM/DE*         | Hyprland           | Gnome                  | Bspwm            | Yabai     |
-| *Compositor*    | Hyprland           | Mutter                 | Picom (jonaburg) | /         |
-| *Bar*           | Eww + Waybar       | Dock-to-Panel          | Polybar          | /         |
-| *Hotkeys*       | Hyprland           | /                      | Sxhkd            | Skhd      |
-| *Launcher*      | Wofi               | Gnome                  | Rofi             | /         |
-| *GTK Theme*     | Orchis-Dark        | Orchis-Dark / Adwaita  | Orchis-Dark      | /         |
-| *Notifications* | Swaync             | Gnome                  | Dunst            | /         |
-| *Terminal*      | Kitty              | Kitty                  | Kitty            | Alacritty |
-| *Used by host*  | Beelink, Work, XPS |                        | VM & Probook     | Macbook   |
+|                 | *NixOS - Wayland* | *NixOS - Wayland/Xorg* | *NixOS - Xorg*   | *Darwin*  |
+|-----------------+-------------------+------------------------+------------------+-----------|
+| *DM*            | /                 | GDM                    | LightDM          | /         |
+| *WM/DE*         | Hyprland          | Gnome                  | Bspwm            | Yabai     |
+| *Compositor*    | Hyprland          | Mutter                 | Picom (jonaburg) | /         |
+| *Bar*           | Eww + Waybar      | /                      | Polybar          | /         |
+| *Hotkeys*       | Hyprland          | /                      | Sxhkd            | Skhd      |
+| *Launcher*      | Wofi              | Gnome                  | Rofi             | /         |
+| *GTK Theme*     | Orchis-Dark       | Adwaita                | Orchis-Dark      | /         |
+| *Notifications* | Swaync            | Gnome                  | Dunst            | /         |
+| *Terminal*      | Kitty             | Kitty                  | Kitty            | Alacritty |
+| *Used by host*  | Beelink, XPS      | Work                   | VM & Probook     | Macbook   |
 
 There are some other desktop environments/window manager (See NixOS - Other). Just link to correct ~default/home.nix~ in ~./hosts/<host>/default and home.nix~.
 There is also a general Nix config with hostname ~pacman~ that can be used on pretty much any disto.
