--- a/README.org
+++ b/README.org
@@ -30,7 +30,7 @@
 | *GTK Theme*     | Orchis-Dark       | Adwaita                | Orchis-Dark      | /                       |
 | *Notifications* | Swaync            | Gnome                  | Dunst            | /                       |
 | *Terminal*      | Kitty             | Kitty                  | Kitty            | Kitty                   |
-| *Used by host*  | Beelink, XPS      | Work                   | VM & Probook     | MacBook{Intel, AirM1, AirM3} |
+| *Used by host*  | Beelink           | Work                   | VM               | MacBook{Intel, AirM1, AirM3} |
 
 There are some other desktop environments/window manager (See NixOS - Other). Just link to correct ~default/home.nix~ in ~./hosts/<host>/default and home.nix~.
 There is also a general Nix config with hostname ~pacman~ that can be used on pretty much any disto.
@@ -42,9 +42,9 @@ Components relevant to all hosts:
 
 * NixOS Installation Guide
 This flake currently has *3* host setups
- 1. Beelink & XPS
+ 1. Beelink
     - UEFI boot w/ systemd-boot
- 2. Work & Probook
+ 2. Work
     - UEFI boot w/ grub
  4. vm
     - Legacy boot w/ grub
